DPO-2657 Fira Liike - Loki eriyttämisen vaikutukset (#58)
* DPO-2657 Fira Liike - Loki eriyttämisen vaikutukset
- Added koju-api_v2 schema and model code generation
- Data fetch from koju-api
- Logging improvements with new json logging
- Swagger codegen plugin
- Disable Spring Boot banner at startup
- Use koju messageDateTime instead of messageReference
- Fix tests to work in another time zone than Helsinki
- Use self generated version for compositions and save message date time to db.
- docs updated
- Fix 1D -> 1M period for composition fetch